# sber-agents

./: README.md
02-llm-api/src/: bot.py
03-aidd/: .env.example  .env.test  .gitignore  Makefile  pyproject.toml  report.md  test_llm.py
03-aidd/docs/: conventions.md  idea.md  tasklist.md  vision.md  workflow.md
03-aidd/src/: __init__.py  bot.py  config.py  llm_client.py
04-multimodal/: README.md  README_IMAGE_ISSUES.md  pyproject.toml  test_bot.py  test_openrouter.py  test_request.json  test_request_llama.json  test_voice_transcription.py  voice_transcription_research.md
04-multimodal/.ssh/: immers-vm.pem
04-multimodal/docs/: idea.md  tasklist.md  vision.md  voice_transcription_status.md  voice_transcription_summary.md
04-multimodal/prompts/: system_prompt_image.txt
04-multimodal/src/: bot_simple.py  config.py  handlers.py  llm.py  transcribe.py  transcribe_alt.py  transcribe_vosk.py
05-rag-langchain/: pyproject.toml
05-rag-langchain/src/: bot.py  handlers.py  indexer.py  indexer_with_json.py  indexer_with_local_embeddings.py  indexer_with_ollama.py  indexer_with_ollama_langchain.py  rag.py
06-monitoring-qa/: report.md
07-advanced-rag/: check_embedding.py  run_debug.py  run_with_logs.py  test_model.py
docs/: idea.md
